<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_garbage"
            android:icon="@drawable/ic_menu_garbage_collector"
            android:title="@string/menu_garbage_collector" />
        <item
            android:id="@+id/nav_reuse"
            android:icon="@drawable/ic_baseline_find_replace_24"
            android:title="@string/menu_Reuse" />
        <item
            android:id="@+id/nav_wastebin"
            android:icon="@drawable/ic_menu_wastebin"
            android:title="@string/menu_waste_bin"/>

        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_menu_tips"
            android:title="@string/tips_tricks"/>
    </group>
</menu>