<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.apphandin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_garbage"
        android:name="com.example.apphandin.ui.garbage.GarbageFragment"
        android:label="@string/menu_garbage_collector"
        tools:layout="@layout/fragment_garbage" />


    <activity
        android:id="@+id/nav_reuse"
        android:name="com.example.apphandin.ui.REUSE.ReuseActivity"
        android:label="@string/REUSE"
        tools:layout="@layout/activity_reuse"/>

    <fragment
        android:id="@+id/nav_wastebin"
        android:name="com.example.apphandin.ui.wasteBin.WasteBinFragment"
        android:label="Wastebin"
        tools:layout="@layout/fragment_wastebin"/>

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.apphandin.ui.tips.TipsFragment"
        android:label="@string/tips_tricks"
        tools:layout="@layout/fragment_tips"/>
</navigation>